--- a/rssfeeds/templates/rssfeeds/error.html
+++ b/rssfeeds/templates/rssfeeds/error.html
@@ -3,11 +3,10 @@
 {% block content %}
 
 <h1>
-    {{ name }}
+    You've done something wrong.
 </h1>
-
 <p>
-    {{ contents }}
+    {{ err_msg }}
 </p>
 
 {% endblock content %}
