--- a/rssfeeds/templates/rssfeeds/channels.html
+++ b/rssfeeds/templates/rssfeeds/channels.html
@@ -39,4 +39,4 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 </table>
 
 
-{% endblock content %}
+{% endblock %}
