added ModelForm to insert new RSS feed'

--- a/rssfeeds/templates/rssfeeds/channels.html
+++ b/rssfeeds/templates/rssfeeds/channels.html
@@ -13,6 +13,12 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
     {{ a }}
 </p>
 
+<button>
+    <a href="{% url 'new-channel' %}">
+        Enroll New!
+    </a>
+</button>
+
 <table>
     <tr>
         <th>Title</th>
