updated models for subscribers and rssfeeds

--- a/rssfeeds/templates/rssfeeds/channels.html
+++ b/rssfeeds/templates/rssfeeds/channels.html
@@ -23,6 +23,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
     <tr>
         <th>Title</th>
         <th>Description</th>
+        <th>Created by</th>
         <th>Link</th>
         <th>Action</th>
     </tr>
@@ -35,6 +36,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 </a>
             </td>
             <td>{{ chn.description }}</td>
+            <td>{{ chn.created_by }}</td>
             <td>
                 <a href="{{ chn.link }}">
                     Ext. Link
