--- a/rssfeeds/templates/rssfeeds/single_channel.html
+++ b/rssfeeds/templates/rssfeeds/single_channel.html
@@ -11,6 +11,9 @@
     <p>
         {{ channel_detail.description }}
     </p>
+    <p>
+        created by {{ channel_detail.created_by }}
+    </p>
     <a href="{{ channel_detail.link }}">
         External Link
     </a>
