applied theme to main and navbar

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
         <!-- Mumble UI -->
         <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
         <!-- Dev Search UI -->
-        <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/app.css' %}" />
 
         <title>R&D Portal</title>
     </head>
