fixed rssfeed image url

--- a/rssfeeds/templates/rssfeeds/channels.html
+++ b/rssfeeds/templates/rssfeeds/channels.html
@@ -35,7 +35,7 @@
           <div class="column">
             <div class="card project">
               <a href="{% url 'channel-detail' chn.id %}" class="project">
-                <img class="project__thumbnail" src="{% static chn.feed_image %}" alt="project thumbnail" />
+                <img class="project__thumbnail" src="{% static chn.image %}" alt="project thumbnail" />
                 <div class="card__body">
                   <h3 class="project__title">{{ chn.title }}</h3>
                   <p>
