--- a/rssfeeds/templates/rssfeeds/single_channel.html
+++ b/rssfeeds/templates/rssfeeds/single_channel.html
@@ -20,7 +20,7 @@
 </div>
 
 <hr/>
-<img src="{% static channel_detail.feed_image.url %}"/>
+<img src="{% static channel_detail.image %}"/>
 <table>
     <tr>
         <th>Title</th>
